# psbd-transformer

./: .gitignore  CLAUDE.md  README.md  analyze.py  analyze_latent.py  attack_bpp.py  attack_lc.py  attack_lf.py  attack_tact.py  attack_wanet.py  attacks.py  backdoor_data.py  backdoor_train_dev.ipynb  badnet_train_resnet.py  benign_train_deit.py  benign_train_resnet.py  benign_train_swin.py  benign_train_vit.py  checkpoint_eval.py  cka.py  colab_drive_training_runner.ipynb  config.py  datasets.py  detection.py  direction.py  download.py  dropout.py  evaluate.py  features.py  lipschitz.py  loaders.py  main.py  metrics.py  models.py  normalize_checkpoints.py  plotting.py  poison.py  process_dataset.py  psbd.py  psbd_sweep.ipynb  (+17 more)
_archive/: analyze.py  experiment_io.py  get_results.py  plotting.py  process_dataset.py  run_sweep.py  sweep.py  tmp.py
analysis/: __init__.py  analyze_latent.py  embedding.py  features.py  lipschitz.py
attacks/: __init__.py  adaptive_blend.py  badnet.py  badnets.py  blend.py  bpp.py  generated.py  lc.py  lf.py  sig.py  tact.py  wanet.py
defences/: __init__.py  checkpoint_eval.py  detection.py  dropout.py  inference.py
defenses/: __init__.py  base.py
models/: __init__.py  deit.py  resnet_v2.py  swin.py
notebooks/: backdoor_train_dev.ipynb  psbd_sweep.ipynb  sam_dev.ipynb
pbs/: train_adaptive_blend.pbs  train_badnet_a2a.pbs  train_badnet_a2o.pbs  train_benign.pbs  train_blend.pbs  train_bpp.pbs  train_lc.pbs  train_lf.pbs  train_sig.pbs  train_tact.pbs  train_wanet.pbs
plotting/: __init__.py
tests/: test_attack_triggers.py  (+7 more)
(+159 files in other folders)
