[project]
name = "psbd-vit"
version = "0.1.0"
description = "Prediction Shift Backdoor Detection for Vision Transformers"
requires-python = ">=3.11,<3.12"

dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "numpy==2.4.5",
    "pillow==12.2.0",
    "matplotlib>=3.10.9",
    "scikit-learn",
    "timm>=1.0.27",
    "lightning>=2.6.5",
    "lpips>=0.1.4",
    "torchmetrics>=1.9.0",
]

[dependency-groups]
analysis = ["umap-learn"]
dev = ["ruff", "ipython", "jupyter", "ipykernel", "pytest>=9.1.1", "scikit-image"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["slow: needs a GPU and real training, skipped by default (pytest -m slow to run)"]
addopts = "-m 'not slow'"

[tool.uv]
# Flat scripts, not an installable package, so uv manages the environment only.
package = false

# CUDA 12.4, matching the supercomputer driver. Change the tag only if you move
# to a machine with a different CUDA version.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
